[package]
name = "local-server"
version = "0.1.0"
authors = ["oded@kzencorp.com <oded@kzencorp.com>"]
license = "MIT"
exclude = ["artifacts.json", "index.node"]

[dependencies]
serde = "1.0.75"
serde_json = "1.0.26"
serde_derive = "1.0.75"

[dependencies.gotham-server]
git = "https://github.com/ZenGo-X/gotham-city.git"
branch = "feature/p256"
